--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,3 +8,16 @@ body {
 	margin: 40px auto;
 	background-color:red;
 }
+.container {
+display: flex;
+max-width: 900px;
+margin: auto;
+}
+.container .leftSide {
+	flex:1;
+	margin-right:40px;
+}
+.container .rightSide{
+	flex:1;
+	margin-left:40px;
+}
