--- a/src/App.module.css
+++ b/src/App.module.css
@@ -17,6 +17,30 @@ margin: auto;
 	flex:1;
 	margin-right:40px;
 }
+.container .leftSide h1 {
+}
+.container .leftSide p {
+}
+.container .leftSide input {
+width:100%;
+border:0px;
+border-bottom: 2px solid gray;
+padding:10px 2px;
+outline: 0;
+margin-bottom: 20px;}
+.container .leftSide button {
+width:100%;
+font-size: 15px;
+padding: 15px;
+border: 0;
+border-radius:15px;
+background-color: cyan;
+cursor: pointer;
+transition: all ease .3s;
+}
+
+.container .leftSide button:hover {
+background-color: blue;}
 .container .rightSide{
 	flex:1;
 	margin-left:40px;
