--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,47 +1,58 @@
-* {box-sizing: border-box;}
+* {
+  box-sizing: border-box;
+}
 body {
-	font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .headerContainer {
-	max-width: 900px;
-	margin: 40px auto;
-
+  max-width: 900px;
+  margin: 40px auto;
 }
 .container {
-display: flex;
-max-width: 900px;
-margin: auto;
+  display: flex;
+  max-width: 900px;
+  margin: auto;
 }
 .container .leftSide {
-	flex:1;
-	margin-right:40px;
+  flex: 1;
+  margin-right: 40px;
 }
-.container .leftSide h1 {
+/* .container .leftSide h1 {
 }
 .container .leftSide p {
-}
+} */
 .container .leftSide input {
-width:100%;
-border:0px;
-border-bottom: 2px solid gray;
-padding:10px 2px;
-outline: 0;
-margin-bottom: 20px;}
+  width: 100%;
+  border: 0px;
+  border-bottom: 2px solid gray;
+  padding: 10px 2px;
+  outline: 0;
+  margin-bottom: 20px;
+}
 .container .leftSide button {
-width:100%;
-font-size: 15px;
-padding: 15px;
-border: 0;
-border-radius:15px;
-background-color: cyan;
-cursor: pointer;
-transition: all ease .3s;
+  width: 100%;
+  font-size: 15px;
+  padding: 15px;
+  border: 0;
+  border-radius: 15px;
+  background-color: cyan;
+  cursor: pointer;
+  transition: all ease 0.3s;
 }
 
 .container .leftSide button:hover {
-background-color: blue;}
-.container .rightSide{
+  background-color: blue;
+}
+.container .rightSide {
+  flex: 1;
+  margin-left: 40px;
+  display: flex;
+}
+
+.container .rightSide .grid {
 	flex:1;
-	margin-left:40px;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 20px;
 }
